# ml-lab

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  citation_pipeline.json  pyproject.toml
docs/: README.md  apa_sources.md  citation_audit_study.md  citation_workflow.md  contribution_map.md  dartmouth_health_study_concept.md  dartmouth_study_packet.md  data_classification_policy.md  data_dictionary.md  doi_pipeline.md  doi_verification_workflow.md  ecosystem_readiness_review.md  evidence_quality_rubric.md  evidence_roadmap.md  experimental_protocol.md  governance_checklist.md  health_system_pilot_protocol.md  literature_matrix.md  manuscript_framework.md  manuscript_introduction.md  manuscript_methods.md  manuscript_pilot_bridge.md  manuscript_reproducibility.md  ocr_translation_boundary.md  paper_multilingual_ingestion_workflow.md  paper_outline.md  pilot_protocol.md  pre_analysis_plan.md  publishable_topic.md  repo_tracks.md  reporting_workflow.md  research_design.md  researcher_guide.md  result_interpretation.md  roadmap.md  scaffolding_best_practices.md  specific_aims_draft.md  statistical_summary.md  synthetic_experiment_methods.md  synthetic_workflow.md  (+1 more)
scripts/: export_synthetic_experiment.py  generate_synthetic_report.py  run_doi_pipeline.py  run_synthetic_experiment.py  summarize_synthetic_experiment.py  verify_dois.py
tests/: test_audit.py  test_core.py  test_doi_pipeline.py  test_doi_verifier.py  test_evaluation_metrics.py  test_experiment_runner.py  test_export_results.py  test_reporting.py  test_scaffold_policy.py  test_statistical_summary.py  (+1 more)
(+33 files in other folders)
