[project]
name = "ml-lab"
version = "0.1.0"
description = "Adaptive machine-learning scaffolding research lab"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Paul Skeffington" }
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "jupyter>=1.0"
]

[project.scripts]
ml-lab-run = "ml_lab.experiments.runner:main"
ml-lab-analyze = "ml_lab.evaluation.metrics:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
